fixed mobile phone number spacing and email tags

--- a/css/custom.css
+++ b/css/custom.css
@@ -9,6 +9,9 @@ body{
 
 h1{
   font-size: 34px;
+}
+
+.section-heading{
   margin-bottom: 1.25em;
 }
 
@@ -189,7 +192,7 @@ a:focus{
 .paralaxText h2{
   line-height: 0.5em;
   font-weight: 800;
-  font-size: 1.1em;
+  font-size: 0.9em;
   color: #FFF!important;
   text-shadow: 1px black;
   text-shadow: 1px 1px 0 #000,-1px -1px 0 #000,1px -1px 0 #000,-1px 1px 0 #000,1px 1px 0 #000;
